--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,83 @@
-.body{
-    font-family: ubuntu, sans-serif;
+body {
+    position: relative;
+    font-family: 'Raleway', sans-serif;
+    font-size:16px;
 }
+
+:root {
+    --color-bordo: #8C3B42;
+    --color-pink: #F21D56;
+    --color-lilas: #7168A6;
+    --color-amarelo-claro: #F2D649;
+    --color-amarelo: #F2B544;
+    --spacing: 6.25rem;   
+}
+
+nav a {
+    text-transform: uppercase;
+    color: var(--color-bordo);
+    font-weight: 700;
+    text-decoration: none;
+    padding: 1rem 0;
+    margin-right: 1rem;    
+}
+
+.brand {
+     letter-spacing: -0.2rem;
+     font-size:3rem; 
+}
+
+.bloco-principal {
+    background-color: var(--color-amarelo);
+    padding-top: var(--spacing);
+    padding-bottom: var(--spacing);
+    height:100vh;
+}
+
+.imagem {
+    border: 10px solid #f1f1f1;
+    height: auto;
+    width: auto;
+    display: flex;
+    display: block;   
+}
+
+img {
+    border-radius: 100%;
+}
+
+
+
+/*texto animado*/
+.conteudo h1 {
+    text-transform: uppercase;
+    font-size:5rem;
+    line-height: 3.5rem;
+        
+}
+.conteudo span.typed-text {
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height:3.5rem;
+  font-size:5rem;
+  color: var(--color-lilas);
+}
+.conteudo span.cursor {
+  display: inline-block;  
+  margin-left: 0.1rem;
+  width: 1rem;
+  animation: blink 1s infinite;
+}
+
+.conteudo span.cursor.typing {
+  animation: none;
+}
+
+@keyframes blink {
+  0%  { background-color: #ccc; }
+  49% { background-color: #ccc; }
+  50% { background-color: transparent; }
+  99% { background-color: transparent; }
+  100%  { background-color: #ccc; }
+}
+/*fim texto animado*/
