--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/* -- incluir media queryes--
+imagem
+*/
+
 body {
     position: relative;
     font-family: 'Raleway', sans-serif;
@@ -10,6 +14,7 @@ body {
     --color-lilas: #7168A6;
     --color-amarelo-claro: #F2D649;
     --color-amarelo: #F2B544;
+    --color-branco: #fff;
     --spacing: 6.25rem;   
 }
 
@@ -22,9 +27,19 @@ nav a {
     margin-right: 1rem;    
 }
 
+nav a:hover{
+  color: var(--color-pink);
+}
+
 .brand {
      letter-spacing: -0.2rem;
      font-size:3rem; 
+}
+
+.menu-principal {
+  justify-content: space-between;
+  margin-left: 1rem;
+  padding-left: 12.5rem;
 }
 
 .bloco-principal {
@@ -36,19 +51,47 @@ nav a {
 
 .imagem {
     border: 10px solid #f1f1f1;
-    height: auto;
-    width: auto;
-    display: flex;
-    display: block;   
+    
 }
 
 img {
     border-radius: 100%;
 }
 
+.nome {
+  border-bottom: 2px solid var(--color-amarelo-claro);
+  font-weight: 900;
+}
 
+.espaco{
+  padding-top:var(--spacing);
+  padding-bottom:var(--spacing);
+}
+
+.subtitulos {  
+  background-color:var(--color-pink);
+  font-weight: 400;  
+}
+
+.texto {
+  font-weight: 400;  
+  line-height:2.5rem;
+  font-size:1.5rem;
+  padding: 0 2rem;  
+  margin: var(--spacing) 0;
+}
+
+.icones {
+  font-size:2.5rem;
+  color: var(--color-pink);
+  margin: 2rem 0;
+}
 
 /*texto animado*/
+
+.conteudo{
+  margin-top:var(--spacing);
+}
 .conteudo h1 {
     text-transform: uppercase;
     font-size:5rem;
