--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
     font-size:16px;
 }
 
+
 :root {
     --color-bordo: #8C3B42;
     --color-pink: #F21D56;
@@ -17,6 +18,7 @@ body {
     --color-branco: #fff;
     --spacing: 6.25rem;   
 }
+
 
 nav a {
     text-transform: uppercase;
@@ -51,19 +53,20 @@ nav a:hover{
 
 .imagem {
     border: 10px solid #f1f1f1;
-    
-}
-
-img {
     border-radius: 100%;
 }
+
 
 .nome {
   border-bottom: 2px solid var(--color-amarelo-claro);
   font-weight: 900;
 }
 
-.espaco{
+.espaco-bottom {
+  padding-bottom:var(--spacing);
+}
+
+.espaco {
   padding-top:var(--spacing);
   padding-bottom:var(--spacing);
 }
@@ -75,16 +78,68 @@ img {
 
 .texto {
   font-weight: 400;  
-  line-height:2.5rem;
+  line-height:2.8rem;
   font-size:1.5rem;
-  padding: 0 2rem;  
+  padding-right: 2rem;  
   margin: var(--spacing) 0;
+  text-align: justify;
 }
+
+textarea:focus, input:focus, select:focus {
+  box-shadow: 0 0 0 0;
+  border: 0 none;
+  outline: 0;
+} 
+
+.divisoria {
+  border-bottom: 1px solid #000;
+}
+
+.texto-contato {
+  font-weight: 400;  
+  line-height:2.8rem;
+  font-size:1.5rem; 
+  text-align: justify;
+  padding-right: 4.5rem;
+}
+
 
 .icones {
   font-size:2.5rem;
-  color: var(--color-pink);
+  color: var(--color-bordo);
   margin: 2rem 0;
+}
+
+.icones-rodape {
+  font-size:2.5rem;
+  color: var(--color-lilas);
+  margin: 2rem 0;
+}
+
+.progresso {
+  padding-right: var(--spacing);
+  font-size:1.25rem;
+  text-align: right;  
+}
+
+
+.shadow {
+  -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 5px 5px rgba(0,0,0,0.14); 
+  box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 5px 5px rgba(0,0,0,0.14);  
+}
+
+.ultimo-bloco {
+  background-color: var(--color-amarelo);
+  padding-top: var(--spacing);
+  padding-bottom: var(--spacing);
+}
+
+footer a {
+  color:var(--color-amarelo-claro);
+}
+
+footer a:hover {
+  color:var(--color-pink);
 }
 
 /*texto animado*/
