--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
-/* -- incluir media queryes--
-imagem
-*/
+/*------ @sasha ----*/
+html, body {
+  scroll-behavior: smooth;
+}
 
 body {
     position: relative;
@@ -31,6 +32,7 @@ nav a {
 
 nav a:hover{
   color: var(--color-pink);
+  opacity: .4;
 }
 
 .brand {
@@ -179,3 +181,81 @@ footer a:hover {
   100%  { background-color: #ccc; }
 }
 /*fim texto animado*/
+
+
+/*navegação*/
+@keyframes sdb03 {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.1;
+  }
+}
+
+/*---media queries ----*/
+/* Extra small devices (portrait phones, less than 576px)*/
+@media (max-width: 575.98px) {
+.bloco-principal {
+  background-color: var(--color-amarelo);   
+  height:100vh;
+}
+
+.icones-rodape {
+  font-size:1.5rem;
+  color: var(--color-lilas);
+  margin: 2rem 0;
+}
+.texto-contato {
+  line-height:2rem;
+  font-size:1rem; 
+  text-align: justify;  
+}
+
+.imagem {
+  display: none;
+}
+
+#home button,
+ #home a {
+  font-size:1.2rem;
+  padding: 0;
+}
+  
+}
+/* Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) and (max-width: 767.98px) { 
+
+.bloco-principal {
+  background-color: var(--color-amarelo);   
+  height:100vh;
+}
+.icones-rodape {
+  font-size:1.5rem;
+  color: var(--color-lilas);
+  margin: 2rem 0;
+}
+
+.texto-contato {
+  line-height:2rem;
+  font-size:1rem; 
+  text-align: justify;  
+}
+
+.imagem {
+    display: none;
+}
+
+#home button,
+#home a {
+  font-size:1.2rem;
+  padding: 0;
+}
+}
