--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ html, body {
 }
 
 body {
+    background: #ffffff;
     position: relative;
     font-family: 'Raleway', sans-serif;
     font-size:16px;
@@ -14,33 +15,33 @@ body {
     --color-pink: #F21D56;
     --color-lilas: #7168A6;
     --color-amarelo-claro: #F2D649;
-    --color-amarelo: #F2B544;
+    --color-amarelo: #F2E205;
     --color-branco: #fff; 
-    --color-preta: #000;   
+    --color-preta: #343a40;   
     --spacing: 5rem;   
 }
 
-.navegacao a:hover,
-#contato a:hover,
-#sobre a:hover,
-#servicos a:hover,
-#portfolio a:hover,
-#home a:hover,
-#resumo a:hover {
-  color: var(--color-pink);  
-}
-
-.navegacao a {
-  color: var(--color-bordo);
+.navegacao a{
+  color: var(--color-preta);
   text-transform: uppercase;
   font-weight: 700;
   text-decoration: none;
   padding: 1rem 0;
   margin-right: 1rem;   
+  transition: 1s;
 }
 
-.brand {
-     letter-spacing: -0.2rem;     
+.navegacao a:hover {
+   color:#F21D56;
+   transform: scale(1.2);
+}
+
+.navegacao {
+   background: #f2f2f2;
+}
+
+.navegacao a[title] {
+     font-weight: 900;     
 }
 
 .menu-principal {
@@ -55,9 +56,9 @@ body {
 }
 
 .imagem {
-    border: 1.5rem solid var(--color-branco);
-    border-radius: 100%;
-    opacity: .7;
+    border: 1.25rem solid var(--color-branco);
+    border-radius: 50%;
+    filter:grayscale(1);
     margin-top: var(--spacing);
 }
 
@@ -155,17 +156,22 @@ footer a:hover {
     line-height: 3.5rem;
         
 }
+
+.cursor {
+   font-weight: 500;
+   color: var(--color-preta);
+}
 .conteudo span.typed-text {
   font-weight: 700;
   text-transform: uppercase;
   line-height:5rem;
   font-size:5rem;
-  color: var(--color-bordo);
+  color: var(--color-preta);
 }
 .conteudo span.cursor {
   display: inline-block;  
   margin-left: 0.1rem;
-  width: 1rem;
+  width: 1rem;  
   animation: blink 1s infinite;
 }
 
@@ -174,32 +180,37 @@ footer a:hover {
 }
 
 @keyframes blink {
-  0%  { background-color: #ccc; }
-  49% { background-color: #ccc; }
+  0%  { background-color: #262626; }
+  49% { background-color: #262626; }
   50% { background-color: transparent; }
   99% { background-color: transparent; }
-  100%  { background-color: #ccc; }
+  100%  { background-color: #262626; }
 }
 /*fim texto animado*/
 
-
-/*navegação*/
-@keyframes sdb03 {
-  0% {
-    opacity: 0;
-  }
-  30% {
-    opacity: 1;
-  }
-  60% {
-    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
-    opacity: 0;
-  }
-  100% {
-    opacity: 0.1;
-  }
+/*button*/
+.btn-white {
+   transition: 2s ease-in-out;   
+   
+   box-shadow: 5px 4px 14px 0px rgba(0,0,0,0.75);
+   -webkit-box-shadow: 5px 4px 14px 0px rgba(0,0,0,0.75);
+   -moz-box-shadow: 5px 4px 14px 0px rgba(0,0,0,0.75);
 }
 
+.btn-white:hover{
+   transform: scale(1.3);
+}
+
+/*navegação*/
+.arrow {
+   animation: is-boucing 1s ease-in-out alternate infinite;
+}
+
+@keyframes is-boucing {
+   to {
+      transform: translateY(15px);
+   }
+}
 /*---media queries ----*/
 /* Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px) {
@@ -255,6 +266,7 @@ color: var(--color-bordo);
 }
   
 }
+
 /* Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) and (max-width: 767.98px) { 
 
@@ -325,3 +337,4 @@ color: var(--color-bordo);
   margin-top: var(--spacing);
 }
 }
+
