--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.navegacao a{
+.navegacao a {
   color: var(--text);
   text-transform: uppercase;
   font-weight: 700;
@@ -27,17 +27,7 @@
   padding-left: 12.5rem;
 }
 
-.bloco-principal {
-    background-color: var(--orange);     
-    height:100vh;
-}
 
-.imagem {
-    border: 1.25rem solid var(--white);
-    border-radius: 50%;
-    filter:sepia(0.5);
-    margin-top: var(--spacing);
-}
 
 .underline {
   border-bottom: 2px solid var(--yellow);  
@@ -53,11 +43,6 @@
 
 .espaco-y {
 padding: var(--spacing);
-}
-
-.espaco {
-  padding-top:var(--spacing);
-  padding-bottom:var(--spacing);
 }
 
 .subtitulos {  
@@ -98,7 +83,7 @@ textarea:focus, input:focus, select:focus {
 
 .icones-rodape {
   font-size:2.5rem;
-  color: var(--black);
+  color: var(--deep-orange);
   margin: 2rem 0;
 }
 
@@ -114,78 +99,16 @@ textarea:focus, input:focus, select:focus {
 }
 
 footer a {
-  color:var(--color-amarelo-claro);
+  color:var(--yellow);
 }
 
 footer a:hover {
   color:var(--pink);
 }
 
-/*texto animado*/
-
-.conteudo{
-  margin-top:var(--spacing);
-}
-
-.conteudo h1 {
-    text-transform: uppercase;
-    font-size:5rem;
-    line-height: 3.5rem;
-        
-}
-
-.cursor {
-   font-weight: 500;
-   color: var(--title);
-}
-.conteudo span.typed-text {
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height:5rem;
-  font-size:5rem;
-  color: var(--title);
-}
-.conteudo span.cursor {
-  display: inline-block;  
-  margin-left: 0.1rem;
-  width: 1rem;  
-  animation: blink 1s infinite;
-}
-
-.conteudo span.cursor.typing {
-  animation: none;
-}
-
-@keyframes blink {
-  0%  { background-color: #262626; }
-  49% { background-color: #262626; }
-  50% { background-color: transparent; }
-  99% { background-color: transparent; }
-  100%  { background-color: #262626; }
-}
-/*fim texto animado*/
-
-/*button*/
-.btn-white {
-   transition: 2s ease-in-out;   
-   
+.btn-white,
+.btn-black {   
    box-shadow: 5px 4px 14px 0px rgba(0,0,0,0.75);
    -webkit-box-shadow: 5px 4px 14px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 5px 4px 14px 0px rgba(0,0,0,0.75);
-}
-
-.btn-white:hover{
-   transform: scale(1.3);
-}
-
-/*navegação*/
-.arrow {
-   animation: is-boucing 1s ease-in-out alternate infinite;
-}
-
-@keyframes is-boucing {
-   to {
-      transform: translateY(15px);
-   }
-}
-
+ }
