:sparkles: new assets and improvements.:

--- a/css/animations.css
+++ b/css/animations.css
@@ -66,6 +66,12 @@
   
 }
 
+.arrow-reverse {
+   color: var(--black);
+   animation: fadeInDown 2.5s ease 1s infinite reverse;
+   
+ }
+
 @keyframes fadeInDown {
    0% {
    opacity: 0;
@@ -80,43 +86,47 @@
    } 
 
 
-   .outra {
-      -webkit-animation: scale-up-center 0.4s cubic-bezier(0.600, 0.040, 0.980, 0.335) 0.2s both;
-      animation: scale-up-center 0.4s cubic-bezier(0.600, 0.040, 0.980, 0.335) 0.2s both;
-   }
-   
-   @-webkit-keyframes scale-up-center {
-      0% {
-        -webkit-transform: scale(0.5);
-                transform: scale(0.5);
-      }
-      100% {
-        -webkit-transform: scale(1);
-                transform: scale(1);
-      }
-    }
-    @keyframes scale-up-center {
-      0% {
-        -webkit-transform: scale(0.5);
-                transform: scale(0.5);
-      }
-      100% {
-        -webkit-transform: scale(1);
-                transform: scale(1);
-      }
-    }
 
-    /**/
+/**imagem**/
 
-     
-@keyframes slideInDown {
+.slide-in-bck-right {
+	
+	animation: slide-in-bck-right 0.8s cubic-bezier(0.470, 0.000, 0.745, 0.715) 1s both;
+}
+
+ @keyframes slide-in-bck-right {
    0% {
-   -webkit-transform: translateY(-100%);
+     transform: translateZ(700px) translateX(400px);
+     opacity: 0;
+   }
+   100% {
+     transform: translateZ(0) translateX(0);
+     opacity: 1;
+   }
+ }
+ 
+
+.slideInDown {      
+      animation: slideInDown 0.8s cubic-bezier(0.600, 0.040, 0.980, 0.335) 0.2s both;
+   }
+
+.slideInDown2 {      
+      animation: slideInDown 0.8s cubic-bezier(0.600, 0.040, 0.980, 0.335) 0.4s both;
+   }
+
+.slideInDown3 {      
+      animation: slideInDown 0.8s cubic-bezier(0.600, 0.040, 0.980, 0.335) 0.6s both;
+   }
+
+.slideInDown4 {      
+      animation: slideInDown 0.8s cubic-bezier(0.600, 0.040, 0.980, 0.335) 0.8s both;
+   }
+@keyframes slideInDown {
+   0% {   
       transform: translateY(-100%);
       visibility: visible;
    }
-   100% {
-      -webkit-transform: translateY(0);
+   100% {      
       transform: translateY(0);
    }
 } 
