--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,12 @@
 .main-section {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
-   grid-column-gap: 0;
+   grid-column-gap: 2rem;
    justify-items: center;
    align-items: center;
    justify-content: center;
+   margin-top: 5rem;
+   margin-bottom: 5rem;
 }
 
 main {
@@ -13,13 +15,6 @@ main {
 
 .bloco-principal {
   margin-top: 12rem; 
-}
-
-.imagem {
-   border: 1.25rem solid var(--white);
-   border-radius: 50%;
-   filter:sepia(0.5);
-   margin-top: var(--spacing);
 }
 
 .btn-dark:hover {
