--- a/css/animations.css
+++ b/css/animations.css
@@ -88,43 +88,103 @@
    }
  }
 
-.slideInDown {      
-      animation: slideInDown 0.8s cubic-bezier(0.600, 0.040, 0.980, 0.335) 0.2s both;
-   }
 
-.slideInDown2 {      
-      animation: slideInDown 0.8s cubic-bezier(0.600, 0.040, 0.980, 0.335) 0.4s both;
-   }
+.slide-in-vertical {  
+    animation: slide-in-vertical 0.45s ease-out both;
+}
 
-.slideInDown3 {      
-      animation: slideInDown 0.8s cubic-bezier(0.600, 0.040, 0.980, 0.335) 0.6s both;
-   }
 
-.slideInDown4 {      
-      animation: slideInDown 0.8s cubic-bezier(0.600, 0.040, 0.980, 0.335) 0.8s both;
-   }
-@keyframes slideInDown {
-   0% {   
-      transform: translateY(-100%);
-      visibility: visible;
-   }
-   100% {      
-      transform: translateY(0);
-   }
+@keyframes slide-in-vertical {
+   0% {
+      -webkit-transform: translateZ(-800px) rotateY(90deg);
+      transform: translateZ(-800px) rotateY(90deg);
+      opacity: 0;
+    }
+    54% {
+      -webkit-transform: translateZ(-160px) rotateY(87deg);
+      transform: translateZ(-160px) rotateY(87deg);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: translateZ(0) rotateY(0);
+      transform: translateZ(0) rotateY(0);
+    }
 } 
 
 
-/***verificar**/
+.scale-in-center {
+	-webkit-animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
 
-@keyframes fadeInDown {
+@keyframes scale-in-center {
    0% {
-   opacity: 0;
-   -webkit-transform: translate3d(0, -100%, 0);
-   transform: translate3d(0, -100%, 0);
+     -webkit-transform: scale(0);
+     transform: scale(0);
+     opacity: 1;
    }
    100% {
-   opacity: 1;
-   -webkit-transform: none;
-   transform: none;
+     -webkit-transform: scale(1);
+     transform: scale(1);
+     opacity: 1;
    }
-   } 
+ }
+
+ .bounce-in-fwd {
+	-webkit-animation: bounce-in-fwd 1.1s both;
+	animation: bounce-in-fwd 1.1s both;
+}
+
+@keyframes bounce-in-fwd {
+   0% {
+     -webkit-transform: scale(0);
+             transform: scale(0);
+     -webkit-animation-timing-function: ease-in;
+             animation-timing-function: ease-in;
+     opacity: 0;
+   }
+   38% {
+     -webkit-transform: scale(1);
+             transform: scale(1);
+     -webkit-animation-timing-function: ease-out;
+             animation-timing-function: ease-out;
+     opacity: 1;
+   }
+   55% {
+     -webkit-transform: scale(0.7);
+             transform: scale(0.7);
+     -webkit-animation-timing-function: ease-in;
+             animation-timing-function: ease-in;
+   }
+   72% {
+     -webkit-transform: scale(1);
+             transform: scale(1);
+     -webkit-animation-timing-function: ease-out;
+             animation-timing-function: ease-out;
+   }
+   81% {
+     -webkit-transform: scale(0.84);
+             transform: scale(0.84);
+     -webkit-animation-timing-function: ease-in;
+             animation-timing-function: ease-in;
+   }
+   89% {
+     -webkit-transform: scale(1);
+             transform: scale(1);
+     -webkit-animation-timing-function: ease-out;
+             animation-timing-function: ease-out;
+   }
+   95% {
+     -webkit-transform: scale(0.95);
+             transform: scale(0.95);
+     -webkit-animation-timing-function: ease-in;
+             animation-timing-function: ease-in;
+   }
+   100% {
+     -webkit-transform: scale(1);
+             transform: scale(1);
+     -webkit-animation-timing-function: ease-out;
+             animation-timing-function: ease-out;
+   }
+ }
+ 
