--- a/css/sections.css
+++ b/css/sections.css
@@ -63,9 +63,9 @@
    text-align: center;
    border-radius: 0.5rem;
    background-color: var(--white);
-   box-shadow: 3px 4px 10px 0px rgba(0,0,0,0.75);
-   -webkit-box-shadow: 3px 4px 10px 0px rgba(0,0,0,0.75);
-   -moz-box-shadow: 3px 4px 10px 0px rgba(0,0,0,0.75);
+   box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+   -webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+   -moz-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
 }
 
 .card-services h3 {
@@ -106,8 +106,7 @@
 .box-hiring-1 {
    padding:2rem;
    position: relative;
-   height: 100%;
-   filter:brightness(0.75);
+   height: 100%;   
    background: url(../img/img1.jpg) no-repeat;
    background-size: cover;
    background-position: center;
@@ -117,8 +116,7 @@
 .box-hiring-2 {
    padding:2rem;
    position: relative;
-   height: 100%;
-   filter:brightness(0.75);
+   height: 100%;   
    background: url(../img/img3.jpg) no-repeat;
    background-size: cover;
    background-position: center;
@@ -158,3 +156,50 @@
    color: var(--white);
    background: var(--black);
 }
+
+/**modal**/
+
+.grid-gallery {
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;   
+   gap: 2rem; 
+   justify-items: center;   
+   justify-content: center;
+   padding-top: 5rem;  
+}
+
+.grid-gallery img {
+   position: relative;
+   display: block;
+   width: 300px;
+   height: 300px;
+   border-radius: 0.5rem;
+
+}
+
+.card-gallery{
+   
+   text-align: center;
+   border-radius: 0.5rem;   
+   width: 300px;
+   height: 300px;
+   
+   box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+   -webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+   -moz-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+
+}
+
+.modal {
+   width: 650px;
+   height: 680px;
+   border-radius:0.5rem;
+   display:flex;
+   justify-content: space-between;
+}
+
+.img-modal {
+   max-width: 500px;
+   max-height: 700px;
+}
+
