--- a/css/mobile.css
+++ b/css/mobile.css
@@ -125,3 +125,11 @@
    }
    }
    
+   /***outros
+
+   .navbar-expand-lg .navbar-nav .nav-lik {
+      padding: 1rem 8rem;
+   }
+
+   cor no header e navbar
+   ***/
