--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,8 @@ footer p {
 .btn-black,
 .btn-form,
 .btn-hiring,
-.nav-header {   
+.nav-header,
+.btn-modal {   
    box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
    -webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
