--- a/css/animations.css
+++ b/css/animations.css
@@ -1,19 +1,13 @@
-.text-animated h1 {
-   text-transform: uppercase;
-   font-size:5rem;
-   line-height: 3.5rem;
-   color: var(--title);
-       
-}
 
 .text-animated span.typed-text {
  font-family:'Raleway', sans-serif;
  font-weight: 900;
  text-transform: uppercase;
- line-height:5rem;
- font-size:5rem;
+ line-height:2rem;
+ font-size: min(5rem, 12vw);
  color: var(--title);
 }
+
 .text-animated span.cursor {
  display: inline-block;  
  margin-left: 0.1rem;
@@ -90,6 +84,7 @@
 /*navegação*/
 .arrow {
   color: var(--black);
+  font-size: 2rem;
   animation: fade-in-down 2.7s cubic-bezier(0.390, 0.575, 0.565, 1.000) 0.5s infinite;  
 }
 
@@ -138,7 +133,7 @@
 
 
 .slide-in-vertical {  
-    animation: slide-in-vertical 0.45s ease-out both;
+    animation: slide-in-vertical 0.8s ease-out both;
 }
 
 
@@ -165,11 +160,25 @@
 	animation: scale-in-center 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
+.scale-in-center-4 {
+	-webkit-animation: scale-in-center 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	animation: scale-in-center 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.scale-in-center-5{
+	-webkit-animation: scale-in-center 2.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	animation: scale-in-center 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.scale-in-center-6 {
+	-webkit-animation: scale-in-center 2.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	animation: scale-in-center 2.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
 @keyframes scale-in-center {
    0% {
      -webkit-transform: scale(0);
      transform: scale(0);
-     opacity: 1;
+     opacity: 0;
    }
    100% {
      -webkit-transform: scale(1);
@@ -257,6 +266,7 @@
        transform: scale(0.91);
      -webkit-animation-timing-function: ease-in;
        animation-timing-function: ease-in;
+       color: var(--pink);
    }
    17% {
      -webkit-transform: scale(0.98);
@@ -269,6 +279,7 @@
        transform: scale(0.87);
      -webkit-animation-timing-function: ease-in;
              animation-timing-function: ease-in;
+             color: var(--pink);
    }
    45% {
      -webkit-transform: scale(1);
